add_subdirectory(alloc)
add_subdirectory(asset)
add_subdirectory(audio)
add_subdirectory(config)
add_subdirectory(ecs)
add_subdirectory(graphics)
add_subdirectory(math)
add_subdirectory(module)
add_subdirectory(network)
add_subdirectory(physics)
add_subdirectory(scene)
add_subdirectory(serialize)
add_subdirectory(skeletal_animation)
add_subdirectory(task)
add_subdirectory(time)
add_subdirectory(utility)
